--- a/HelpDesk/views/consulta.html
+++ b/HelpDesk/views/consulta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" ng-app="helpdesk">
 
 <head>
     <meta charset="UTF-8">
@@ -11,13 +11,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controllers/form-controller.js"></script>
+    <script src="/js/controllers/consulta-controller.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" type="text/css">
     <title>HelpDesk</title>
 </head>
 
-<body ng-app="helpdesk" ng-controller="formController">
+<body ng-controller="consultaController as vm">
     <nav class="navbar navbar-inverse"> <!-- Inicio da Navbar -->
         <div class="container-fluid">
             <div class="navbar-header">
@@ -55,7 +56,7 @@
                 <small class="text-muted">HelpDesk</small>
             </h2>
             <br>
-            <form class="form-horizontal" role="form">
+            <form novalidate name="formConsulta" class="form-horizontal" role="form" ng-submit="vm.consultar()">
                 <div class="form-group">
                     <p class="col-sm-2 control-label"><span class="glyphicon glyphicon-search"></span> Pesquisar</p>
                     <div class="col-sm-4"></div>
@@ -63,25 +64,25 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="idAluno">ID Aluno:</label>
                     <div class="col-sm-4">
-                        <input type="number" id="idAluno" name="idAluno" ng-model="idAluno" class="form-control" ng-minlength="4" ng-maxlength="7">
+                        <input type="number" id="idAluno" name="idAluno" ng-model="vm.cadastro.idAluno" class="form-control" ng-minlength="4" ng-maxlength="7" ng-required="true">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="dataDe">De:</label>
                     <div class="col-sm-4">
-                        <input name="data" id="dataDe" ng-model="dataDe" class="form-control" type="date">
+                        <input name="data" id="dataDe" ng-model="vm.cadastro.dataDe" class="form-control" type="date" ng-required="true">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="dataAte">Até:</label>
                     <div class="col-sm-4">
-                        <input name="data" id="dataAte" ng-model="dataAte" class="form-control" type="date">
+                        <input name="data" id="dataAte" ng-model="vm.cadastro.dataAte" class="form-control" type="date">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="btnSubmit-consulta"></label>
                     <div class="col-sm-4">
-                        <button type="submit" id="btnSubmit-consulta" class="btn btn-success" ng-disabled="formulario.$invalid">OK</button>
+                        <button type="submit" id="btnSubmit-consulta" class="btn btn-success" ng-disabled="!formConsulta.$valid">OK</button>
                     </div>
                 </div>
             </form>
